# ffe-pre-engage

./: .gitignore  README.md  alarm.html  alarm_epreuve.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
server/: package-lock.json  package.json
server/src/: index.js
src/: App.tsx  alarm.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  detect.rs  epreuves.rs  main.rs  models.rs  schema.sql  watcher.rs
src/lib/: invoke.ts
